@@ -70,3 +70,4 @@
 - Shooting star discovery bonus xp is now gradually disbursed instead of lump-sum.
 - Spending points to cancel your slayer task no longer sets your task streak to 0.
 - Stars now have bots that will spawn and help mine for stars higher than level 5.
+- Barrows equipment now lasts for 15 hours of combat instead of 40 minutes of combat.
